# gwas-winners-curse

./: .Rbuildignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESCRIPTION  Makefile.am  Makefile.in  NAMESPACE  README  README.md  aclocal.m4  config.status  configure  configure.ac  gwas_winners_curse-1.0.pc.in  temp_config.h.in
.github/workflows/: R-CMD-check.yaml  test-coverage.yaml
R/: compute_mse.R  correct_winners_curse.R  poisson_binomial_test.R  replication.R  stderr_expectation.R  zero_finding.R
doc/: winners-curse-overview.html
fileinterface/: Makefile.am  Makefile.in  README  configure  configure.ac
fileinterface/fileinterface/: fileinterface.h  fileinterface_reader.h  fileinterface_reader_bzip2.cc  fileinterface_reader_bzip2.h  fileinterface_reader_flat.cc  fileinterface_reader_flat.h  fileinterface_reader_gzip.cc  fileinterface_reader_gzip.h  fileinterface_reader_parent.h  fileinterface_writer.h  fileinterface_writer_bzip2.cc  fileinterface_writer_bzip2.h  fileinterface_writer_flat.cc  fileinterface_writer_flat.h  fileinterface_writer_gzip.cc  fileinterface_writer_gzip.h  fileinterface_writer_parent.h  helper.h  plinkbed.cc  plinkbed.h
gwas_winners_curse/: binomial_zero_finding.cc  binomial_zero_finding.h  cargs.cc  cargs.h  config.h  main.cc  multinomial.cc  multinomial.h  parameters.cc  parameters.h  utilities.h  variance_weights.h  zero_finding.cc  zero_finding.h
gwas_winners_curse/.deps/: gwas_winners_curse_out-binomial_zero_finding.Po  gwas_winners_curse_out-cargs.Po  gwas_winners_curse_out-main.Po  gwas_winners_curse_out-multinomial.Po  gwas_winners_curse_out-parameters.Po  gwas_winners_curse_out-zero_finding.Po
m4/: bzip2.m4
man/: calculate.adjusted.trait.Rd  calculate.ci.Rd  compute.beta.mse.Rd  compute.ci.mse.Rd  compute.power.Rd  compute.variance.explained.Rd  correct.winners.curse.Rd  debias.beta.Rd  debiasing.func.Rd  expected.replication.count.Rd  linear.stderr.expectation.Rd  poisson.binom.test.Rd
tests/: testthat.R
tests/testthat/: test_compute_mse.R  test_correct_winners_curse.R  test_poisson_binomial_test.R  test_replication.R  test_stderr_expectation.R  test_zero_finding.R
tests/testthat/testthat_files/correct_winners_curse/: 18239089_test_expected.tsv  18239089_test_input.tsv  18327257_test_expected.tsv  18327257_test_input.tsv  18514160_test_expected.tsv  18514160_test_input.tsv  18604267_test_expected.tsv  18604267_test_input.tsv  18846228_test_expected.tsv  18846228_test_input.tsv  19079260_test_expected.tsv  19079260_test_input.tsv  (+189 more)
vignettes/: assess-replication-in-study.Rmd  winners-curse-overview.Rmd
